# db-runner

./: .gitignore  LICENSE  README.md  connections.example.json  connections.json  db_runner.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml  version-bump.yml
tests/: test_db_runner.py
