[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-runner"
version = "1.3.0"
description = "Broadcast SQL to multiple MySQL/MariaDB/PostgreSQL databases in parallel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "v0id00" },
]
keywords = ["mysql", "mariadb", "postgresql", "sql", "database", "bulk", "parallel", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "aiomysql>=0.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29.0"]
ssh = ["sshtunnel>=0.4.0"]
vault = ["cryptography>=41.0.0"]
dev = [
    "pytest>=7.0",
    "asyncpg>=0.29.0",
    "sshtunnel>=0.4.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/v0id00/db-runner"
Repository = "https://github.com/v0id00/db-runner"
"Bug Tracker" = "https://github.com/v0id00/db-runner/issues"

[project.scripts]
db-runner = "db_runner:main"

[tool.setuptools]
py-modules = ["db_runner"]

[tool.bumpversion]
current_version = "1.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "db_runner.py"
search = "_version = \"{current_version}\""
replace = "_version = \"{new_version}\""
